--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/InfinityCubes">Home</a></li>
+        		<li><a href="/InfinityCubesGame">Home</a></li>
 	        	<li><a href="/about">About</a></li>
     		</ul>
 		</nav>
