--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Infinity Cubes</h1>
-			<h5> A simple yet fun and everlasting game where you try and eat as much food as you can while avoiding obstacles. Click on the <a href= "/about">About</a> tab to read more...</h5>
+			<h5> A simple yet fun and everlasting game where you try and eat as much food as you can while avoiding obstacles. Click on the <a href= "/About">About</a> tab to read more...</h5>
 				
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
