--- a/About/index.html
+++ b/About/index.html
@@ -8,7 +8,7 @@
 		<nav>
     		<ul>
         		<li><a href="/InfinityCubesGame">Home</a></li>
-	        	<li><a href="/About">About</a></li>
+	        	<li><a href="/InfinityCubesGame/About">About</a></li>
         		
     		</ul>
 		</nav>
