--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@ ul.posts li {
 		<nav>
     		<ul>
         		<li><a href="/InfinityCubesGame">Home</a></li>
-	        	<li><a href="/About">About</a></li>
+	        	<li><a href="/InfinityCubesGame/About">About</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Infinity Cubes</h1>
-			<h5> A simple yet fun and everlasting game where you try and eat as much food as you can while avoiding obstacles. Click on the <a href= "/About">About</a> tab to read more...</h5>
+			<h5> A simple yet fun and everlasting game where you try and eat as much food as you can while avoiding obstacles. Click on the <a href= "/InfinityCubesGame/About">About</a> tab to read more...</h5>
 				
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
