--- a/About/index.html
+++ b/About/index.html
@@ -59,7 +59,7 @@ ul.posts li {
 		<div class="container">
     		<div class="blurb">
         		
-				<p>Wassup</p>
+				<p id = "Intro">
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
