--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Infinity Cubes</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">]
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<style>
 		body {
     margin: 60px auto;
