--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 		<title>Infinity Cubes</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<style>
-		body {
+h1, h5 {
+	margin: 0px auto
+}
+body {
     margin: 60px auto;
     width: 70%;
 }
