--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 		<title>Infinity Cubes</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<style>
+			
+body {
+	background-color = #34FFCD;	
+}
 h1, h5 {
-	margin: 0px auto
+	margin: 0px auto;
 }
 body {
     margin: 60px auto;
