--- a/About/index.html
+++ b/About/index.html
@@ -7,6 +7,9 @@
 		body {
     margin: 60px auto;
     width: 70%;
+			
+	background-color = #34FFCD;	
+
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
