--- a/About/index.html
+++ b/About/index.html
@@ -4,11 +4,11 @@
 		<title>Infinity Cubes</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
 		<style>
-		body {
+body {
     margin: 60px auto;
     width: 70%;
 			
-	background-color = #34FFCD;	
+background-color = blue;	
 
 }
 nav ul, footer ul {
