--- a/About/index.html
+++ b/About/index.html
@@ -8,7 +8,7 @@ body {
     margin: 60px auto;
     width: 70%;
 			
-background-color = blue;	
+background-color = "blue";	
 
 }
 nav ul, footer ul {
@@ -62,7 +62,7 @@ ul.posts li {
 		<div class="container">
     		<div class="blurb">
         		
-				<p id = "Intro">
+				<p id = "Intro"></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
