--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ h1, h5 {
 body {
     margin: 60px auto;
     width: 70%;
-	background-color = #34FFCD;	
+	background-color = "#34FFCD";	
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
