--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<style>
 
-h1, h5 {
-	margin: 0px auto;
+h1 {
+	margin: auto;
+}
+h5 {
+	margin: auto;
+	margin-top: 50px;
 }
 body {
     margin: 60px auto;
