--- a/About/index.html
+++ b/About/index.html
@@ -4,6 +4,13 @@
 		<title>Infinity Cubes</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
 		<style>
+h1 {
+	margin: auto;
+}
+h5 {
+	margin: auto;
+	margin-top: 50px;
+}
 body {
     margin: 60px auto;
     width: 70%;
