--- a/About/index.html
+++ b/About/index.html
@@ -69,7 +69,7 @@ ul.posts li {
 		<div class="container">
     		<div class="blurb">
         		
-				<p id = "Intro"></p>
+				<p id = "Intro">Coming soon...</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
